# osynic_osuapi

./: .env.example  .gitignore  2105932.osz  Cargo.toml  README.md  README_EN.md  README_OPTIMIZATION_SUMMARY.md  Readme.md  TODO.md  V2_GLOO_STATUS.md  V2_GLOO_修复进度报告.md  V2_GLOO_实现报告.md  plantuml.md  修复成功总结.md
.github/workflows/: ci.yml  release.yml
examples/: acg.rs  bd.rs  bg.rs  bga.rs  bgs.rs  bgss.rs  bgssn.rs  bgus.rs  bguss.rs  bl.rs  bpg.rs  bpsg.rs  bs.rs  bsd.rs  bsg.rs  bss.rs  cbg.rs  cbl.rs  ccg.rs  cd.rs  ce.rs  cg.rs  chc.rs  chg.rs  chj.rs  chk.rs  chl.rs  chlg.rs  chmg.rs  chmr.rs  chms.rs  chpc.rs  chug.rs  clg.rs  cp.rs  csg.rs  cva.rs  cvr.rs  dl.rs  e.rs  (+50 more)
licenses/: Readme.md
src/: error.rs  lib.rs  main.rs  prelude.rs  utils.rs
src/v1/client/gloo/: check.rs  client.rs  mod.rs
src/v1/client/gloo/api/: beatmap.rs  mod.rs  multiplayer.rs  replay.rs  scores.rs  user.rs
src/v1/client/request/: check.rs  client.rs
src/v1/client/request/api/: beatmap.rs  multiplayer.rs  replay.rs  scores.rs  user.rs
src/v1/interface/: beatmap.rs  mod.rs  multiplayer.rs  replay.rs  scores.rs  user.rs
src/v1/model/: beatmap.rs  best.rs  mod.rs  mods.rs  multiplayer.rs  recent.rs  replay.rs  scores.rs  user.rs
src/v2/: mod.rs
src/v2/client/: mod.rs
src/v2/client/gloo/: check.rs  client.rs
src/v2/client/gloo/api/: beatmaps.rs  beatmapsets.rs  changelog.rs  chat.rs  comments.rs  events.rs  forum.rs  matches.rs  mod.rs  multiplayer.rs  news.rs  notifications.rs  oauth.rs  ranking.rs  scores.rs  search.rs  users.rs  wiki.rs
src/v2/client/request/: check.rs  client.rs  mod.rs
src/v2/client/request/api/: beatmaps.rs  beatmapsets.rs  changelog.rs  chat.rs  comments.rs  events.rs  forum.rs  friends.rs  matches.rs  mod.rs  multiplayer.rs  news.rs  notifications.rs  oauth.rs  ranking.rs  scores.rs  search.rs  users.rs  wiki.rs
src/v2/interface/: beatmaps.rs  beatmapsets.rs  changelog.rs  chat.rs  comments.rs  events.rs  forum.rs  forums.rs  matches.rs  mod.rs  multiplayer.rs  news.rs  notifications.rs  oauth.rs  ranking.rs  rankings.rs  scores.rs  search.rs  users.rs  wiki.rs
src/v2/model/: mod.rs  wiki.rs
src/v2/model/beatmap/enums/: mod.rs  status.rs
src/v2/model/beatmap/structs/: beatmap.rs  beatmap_playcount.rs  beatmaps.rs  difficulty_attributes.rs  mod.rs  pack.rs  packs.rs
src/v2/model/beatmapset/enums/: status.rs
src/v2/model/beatmapset/structs/: availability.rs  beatmapset.rs  covers.rs  mod.rs  nominations_summary.rs  required_meta.rs
src/v2/model/beatmapsets/enums/: general.rs  language.rs  mod.rs  mode.rs  rank_achieved.rs  search.rs
src/v2/model/beatmapsets/structs/: mod.rs  o_token.rs  search.rs  user.rs
src/v2/model/changelog/structs/: build.rs  changelog.rs  mod.rs  search.rs  stream.rs  versions.rs
src/v2/model/chat/dtos/: request.rs  response.rs
src/v2/model/chat/enums/: channel_type.rs  mod.rs
src/v2/model/chat/structs/: channel.rs  message.rs  mod.rs  silences.rs  user_silence.rs
src/v2/model/comment/enums/: mod.rs
src/v2/model/comment/structs/: bundle.rs  comment.rs  meta.rs  mod.rs  user.rs
src/v2/model/event/: mod.rs
src/v2/model/event/dtos/: response.rs
src/v2/model/event/structs/: event.rs
src/v2/model/forum/dtos/: request.rs  response.rs
src/v2/model/forum/enums/: mod.rs  ranking_type.rs
src/v2/model/forum/structs/: forum.rs  forums.rs  mod.rs  post.rs  spotlight.rs  topic.rs
src/v2/model/matches/dtos/: response.rs
src/v2/model/matches/structs/: matches.rs
src/v2/model/mode/enums/: mode.rs
src/v2/model/news/dtos/: response.rs
src/v2/model/news/structs/: mod.rs  navigation.rs  news.rs
src/v2/model/notification/dtos/: request.rs  response.rs
src/v2/model/notification/structs/: notifications.rs
src/v2/model/oauth/enums/: scope.rs
src/v2/model/oauth/structs/: mod.rs  o_token.rs
src/v2/model/ranking/dtos/: mod.rs
src/v2/model/ranking/enums/: ranking_type.rs
src/v2/model/ranking/structs/: mod.rs  rankings.rs  spotlight.rs  spotlights.rs
src/v2/model/room/structs/: difficulty_range.rs  host.rs  mod.rs  playlist.rs  playlist_mod.rs  recent_participant.rs  room.rs
src/v2/model/score/: mod.rs
src/v2/model/score/dtos/: response.rs
src/v2/model/score/enums/: country.rs  cover.rs  mod.rs  rank.rs  score_type.rs
src/v2/model/score/structs/: beatmap_scores.rs  beatmap_user_score.rs  current_user_attributes.rs  cursor.rs  mod.rs  non_legacy_score.rs  non_legacy_scores.rs  score.rs  scores.rs  statistics.rs  team.rs  user.rs  weight.rs
src/v2/model/search/: mod.rs
src/v2/model/user/: mod.rs
wasm/: Cargo.toml
wasm/examples/: package.json
(+70 files in other folders)
