[package]
name = "osynic_osuapi"
version = "0.1.0"
edition = "2024"
authors = ["Hako Chest <zoneherobrine@gmail.com>"]
rust-version = "1.85.0"
description = "The osu!api wrapper of Osynic App"
keywords = ["osynic", "osu", "osu!api", "wasm"]
categories = ["games", "api-bindings"]
license = "MIT"
documentation = "https://docs.rs/osynic_osuapi"
repository = "https://github.com/osynicite/osynic_osuapi"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
chrono = { version = "0.4.41", features = ["serde"] }

tokio = { version = "1.45.0", features = ["sync","fs","macros","rt-multi-thread"], optional = true }
reqwest = { version = "0.12.15", default-features = false, features = [
    "rustls-tls",
    "json"
], optional = true }

gloo-net = { version = "0.6.0", optional = true }
serde_urlencoded = { version = "0.7.1", optional = true }
serde-wasm-bindgen = { version = "0.6.5", optional = true }
wasm-bindgen = { version = "0.2.100", optional = true }
web-sys = { version = "0.3.77", features = [
    "RequestInit",
    "Headers",
    "console",
    "Window",
    "Performance",
], optional = true }

bitflags = { version = "2.9.0", optional = true }
[dev-dependencies]
dotenvy = "0.15.7"

[features]
default = ["v1", "v2", "not-wasm"]
v1 = ["bitflags"]
v2 = []
wasm = [
    "gloo-net",
    "web-sys",
    "serde-wasm-bindgen",
    "serde_urlencoded",
    "wasm-bindgen",
]
not-wasm = ["tokio", "reqwest"]
