[package]
name = "osynic_osuapi"
version = "0.1.0"
edition = "2024"
authors = ["Hako Chest <zoneherobrine@gmail.com>"]
rust-version = "1.85.0"
description = "High performance, well-structured, extensible Rust osu! API client. Supports both WASM and native environments."
keywords = ["osynic", "osu", "osuapi", "wasm"]
categories = ["games", "api-bindings"]
license = "MIT"
documentation = "https://docs.rs/osynic_osuapi"
repository = "https://github.com/osynicite/osynic_osuapi"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.143" }
chrono = { version = "0.4.41", features = ["serde"] }

tokio = { version = "1.47.1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "fs",
], optional = true }
reqwest = { version = "0.12.23", default-features = false, features = [
    "rustls-tls",
    "json",
], optional = true }

gloo-net = { version = "0.6.0", optional = true }
serde_urlencoded = { version = "0.7.1", optional = true }
serde-wasm-bindgen = { version = "0.6.5", optional = true }
wasm-bindgen = { version = "0.2.100", optional = true }
web-sys = { version = "0.3.77", features = [
    "RequestInit",
    "Headers",
    "console",
    "Window",
    "Performance",
], optional = true }

bitflags = { version = "2.9.2", optional = true }
[dev-dependencies]
dotenvy = "0.15.7"

[features]
default = ["v1", "v2", "not-wasm"]
v1 = ["bitflags"]
v2 = []
wasm = [
    "gloo-net",
    "web-sys",
    "serde-wasm-bindgen",
    "serde_urlencoded",
    "wasm-bindgen",
]
not-wasm = ["tokio", "reqwest"]
